examples/bad/kick_option_non_send.mko
// EXPECT: cannot kick
// Arrays remain non-sendable across kick (fuller Send still rejects slices).
fn use_a(a: []int) -> int {
    len(a)
}

fn main() {
    let a: []int = [1, 2]
    crew t {
        let j = t.kick(use_a(a))
        let _ = j.join()
    }
}
